fixed the appointment-form styling in contact-section
Improved the layout of the gender input and swine age input fields for better responsiveness from phone to desktop view. Adjusted the footer padding to maintain proper spacing between the form and the footer on phone and tablet view. Also fixed the overflowing height of the form on desktop view.

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -5,7 +5,7 @@ footer{
   font-size: var(--footer-fSize);
   background-color: var(--primary-color);
   color: var(--background-color);
-  padding: 60rem 12% 1.5rem 12%;
+  padding: 90rem 12% 1.5rem 12%;
 }
 
 footer .column1{
@@ -44,9 +44,9 @@ footer .socmed-list ul .socmed-icon{
 }
 
 
-@media(width > 480px){
+@media (width > 400px) {
   footer{
-    padding-top: 40rem;
+    padding-top: 80rem;
   }
 }
 
@@ -55,7 +55,7 @@ footer .socmed-list ul .socmed-icon{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 50rem 8% 3rem 8%;
+    padding: 80rem 8% 3rem 8%;
   }
 }
 
